fixed spacing of photos

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@ body {
     background-size: contain;
 }
 
+h2 {
+    text-align: center;
+  }
+
 /* Header styles */
 header {
     background-color: #F00;
@@ -246,8 +250,6 @@ footer p {
 
     .image-gallery img {
         width: 100%;
-        height: auto;
-        margin-bottom: 20px;
     }
 
     header h1 {
@@ -458,4 +460,19 @@ label {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+/* Your existing CSS styles */
+
+/* Add the responsive image width code at the end of your CSS file */
+.image-gallery img {
+    width: 49%;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+@media (max-width: 1065px) {
+    .image-gallery img {
+        width: 100%;
+    }
 }
